# pyetimes

./: .env.example  .gitignore  .ignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  about.txt  build.rs  scheme.sql
.github/workflows/: deploy.yml
docker/: docker-compose.yml
magik/: Cargo.toml
magik/src/: content_builder.rs  lib.rs  parser.rs  renderable.rs  template.rs
magik_old/: Cargo.toml
magik_old/src/: content_builder.rs  lib.rs  renderable.rs
pages/: 404.html  article.html  layout.html  section.html
pages/editor/: layout.html
pages/reader/: article.html  article_preview.html  layout.html  main_story.html  section.html
src/: db.rs  error.rs  main.rs  state.rs
src/api/: articles.rs  authors.rs  editor.rs  index.rs  mod.rs  pye_times.rs
src/middleware/: cache.rs
src/models/: article.rs  author.rs  error.rs  mod.rs  section.rs  user.rs
src/pages/: article.rs  editor.rs  index.rs  mod.rs  new_mod.rs  not_found.rs
src/repo/: articles.rs  authors.rs  feed.rs  mod.rs  sections.rs  users.rs
src/responses/: cache.rs  mod.rs
src/utils/: auth.rs  discord.rs  markdown.rs  mod.rs
src/web/: pages.rs
src/web/components/: meta.rs  mod.rs
src/web/pages/: editor.rs  mod.rs
static/css/: article.css  layout.css  main.css  markdown.css  variables.css
static/css/base/: 404.css
static/css/editor/: layout.css
static/js/: web_components.js
templates/: article.html  layout.html  section.html
web/components/: article.mk  article_preview.mk  article_preview.tmp  editor_header.mk  footer.mk  footer.tmp  header.mk  header.tmp  main_article.mk  meta.mk  meta.tmp  section.tmp
web/pages/: 404.mk  about.mk  article.mk  editor.mk  error.mk  index.mk  index.tmp  register.mk
web/static/css/: 404.css  article.css  editor.css  global.css  layout.css  markdown.css  variables.css
web/static/css/base/: global.css
web/static/css/editor/: layout.css
web/static/js/: web_components.js
