[package]
name = "rs-frontend"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[workspace]
members = ["magik"]

[dependencies]
axum = "0.8.4"
tokio = "1.45.1"
magik = { path = "magik" }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls", # Runtime async y TLS
    "postgres",             # Driver de PostgreSQL
    "chrono",               # Para fechas
    "macros",               # Para query! macros
] }
dotenv = "0.15.0"
serde = "1.0.219"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }

[build-dependencies]
magik = { path = "magik" }
