[package]
name = "pyetimes"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = "0.8.4"
tokio = "1.45.1"
magik = { git = "https://github.com/darilrt/magik", package = "magik" }
magik-macro = { git = "https://github.com/darilrt/magik", package = "magik-macro" }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls", # Runtime async y TLS
    "postgres",             # Driver for PostgreSQL
    "chrono",               # Date and time handling
    "macros",               # Macros for SQLx
] }
dotenv = "0.15.0"
serde = "1.0.219"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
bcrypt = "0.17.0"
pulldown-cmark = "0.13.0"
futures-util = "0.3.31"
thiserror = "2.0.12"
